# icadLS

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  HOW_TO_RUN.md  LICENSE  README.md  TROUBLESHOOTING.md  diagnose.bat  diagnose.sh  make-scripts-executable.bat  start-dev.bat  start-dev.sh  test-api-build.bat  test-api-call.ps1  test-api.ps1  test-cors.ps1  test-database-connection.bat  test-database.bat  test-database.ps1  test-database.sh  test-request.json  test-startup.bat  test-startup.sh  verify-startup-scripts.bat  verify-startup-scripts.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml
analysis/policies/opa/: policy.rego
clients/web-advisor-wasm/: Cargo.toml  index.html
clients/web-advisor-wasm/src/: lib.rs
docs/: ALGORITHM_DETECTION.md  DEVELOPMENT.md  OVERVIEW.md  USER_GUIDE.md
docs/ADR/: 0001-adopt-react-ui.md
docs/API/: openapi.yaml
docs/assets/: README.md
examples/: binary_search.rs  linked_list.rs  quick_sort.rs  sample_code.rs
infra/: docker-compose.yml
services/analyzer-api/: Cargo.toml  Dockerfile
services/analyzer-api/src/: algorithms.rs  data_structures.rs  db.rs  lib.rs  main.rs  wikipedia.rs
services/analyzer-api/src/algorithms/: data.rs
services/analyzer-api/src/data_structures/: data.rs
services/analyzer-api/src/models/: analysis_result.rs  code_sample.rs  mod.rs  wikipedia_algorithm.rs
services/tools/analyze-algos/: Cargo.toml
services/tools/analyze-algos/src/: main.rs
