[package]
name = "analyzer-api"
version = "0.1.0"
edition = "2021"
default-run = "analyzer-api"

[dependencies]
actix-web = "4.0"
actix-cors = "0.6" # Add CORS dependency
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.10"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "mysql", "chrono", "uuid"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.18"
select = "0.6"
dotenv = "0.15"

[[bin]]
name = "analyzer-api"
path = "src/main.rs"

[[bin]]
name = "test_data_structures"
path = "src/bin/test_data_structures.rs"

[profile.release]
strip = "symbols"
lto = "thin"
codegen-units = 1